--- a/package.json
+++ b/package.json
@@ -2,13 +2,21 @@
   "name": "skaat",
   "version": "0.0.0",
   "description": "A Skat game loop",
-  "module": "lib/index.js",
+  "main": "dist/index.cjs",
+  "exports": {
+    "import": "./dist/index.es.js",
+    "require": "./dist/index.cjs"
+  },
+  "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "all": "run-s lint build test",
-    "build": "echo \"no need to build\"",
+    "build": "run-s bundle generate-types",
+    "bundle": "rollup -c",
     "lint": "run-s lint:*",
     "lint:eslint": "eslint .",
     "lint:types": "tsc --pretty",
+    "generate-types": "tsc src/index.js -d --emitDeclarationOnly --removeComments --allowJs --outDir dist",
     "test": "mocha -r esm"
   },
   "repository": {
@@ -26,6 +34,8 @@
     "esm": "^3.2.25",
     "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
+    "rollup": "^2.38.2",
+    "rollup-plugin-copy": "^3.3.0",
     "typescript": "^4.1.3"
   }
 }
