--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "import": "./dist/index.es.js",
     "require": "./dist/index.cjs"
   },
+  "keywords": [
+    "skat",
+    "game loop"
+  ],
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
   "scripts": {
