--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "rollup": "^2.38.2",
     "rollup-plugin-copy": "^3.3.0",
     "typescript": "^4.1.3"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
