--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "dist/index.cjs",
   "exports": {
     "import": "./dist/index.es.js",
-    "require": "./dist/index.cjs"
+    "require": "./dist/index.cjs",
+    "types": "./dist/index.d.ts"
   },
   "module": "dist/index.es.js",
+  "type": "module",
   "types": "dist/index.d.ts",
   "keywords": [
     "skat",
@@ -20,8 +22,8 @@
     "lint": "run-s lint:*",
     "lint:eslint": "eslint .",
     "lint:types": "tsc --pretty",
-    "generate-types": "tsc src/index.js -d --emitDeclarationOnly --removeComments --allowJs --outDir dist",
-    "test": "mocha -r esm",
+    "generate-types": "bio-dts -r --outDir dist src",
+    "test": "mocha",
     "prepublishOnly": "run-s build"
   },
   "repository": {
@@ -30,17 +32,19 @@
   },
   "author": "Nico Rehwaldt <https://github.com/nikku>",
   "devDependencies": {
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.22",
-    "chai": "^4.2.0",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.4",
+    "bio-dts": "^0.8.1",
+    "chai": "^4.3.10",
     "eslint": "^7.18.0",
     "eslint-plugin-bpmn-io": "^0.12.0",
     "esm": "^3.2.25",
-    "mocha": "^8.2.1",
+    "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.38.2",
     "rollup-plugin-copy": "^3.3.0",
-    "typescript": "^4.1.3"
+    "typescript": "^5.3.3"
   },
   "files": [
     "dist"
