--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "lib": [
       "es2019"
     ],
@@ -11,14 +12,10 @@
     "strict": false,
     "noEmit": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true
+    "resolveJsonModule": true
   },
   "include": [
     "src",
     "run"
-  ],
-  "exclude": [
-    "node_modules"
   ]
 }
