--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "skaat",
   "version": "0.0.5",
   "description": "A Skat game loop",
-  "main": "dist/index.cjs",
   "exports": {
-    "import": "./dist/index.es.js",
+    "import": "./dist/index.js",
     "require": "./dist/index.cjs",
     "types": "./dist/index.d.ts"
   },
-  "module": "dist/index.es.js",
   "type": "module",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "keywords": [
     "skat",
