--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,9 @@
 {
   "extends": [
-    "plugin:bpmn-io/es6"
+    "plugin:bpmn-io/recommended"
   ],
-  "env": {
-    "node": true,
-    "es6": true
+  "parserOptions": {
+    "ecmaVersion": 2020
   },
   "rules": {
     "no-bitwise": "off"
