--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lint:types": "tsc --pretty",
     "generate-types": "bio-dts -r --outDir dist src",
     "test": "mocha",
-    "prepublishOnly": "run-s build"
+    "prepare": "run-s build"
   },
   "repository": {
     "type": "git",
