chore: mark as side-effect free

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "sideEffects": false,
   "keywords": [
     "skat",
     "game loop"
